## -*- automake -*-
## (C) 2003 by Nathan Dunn, <ndunn@mac.com>

# SUBDIRS = tinyxml autogui chemostep tinyautogui qtautogui blitzchemostep tinyblitzchemostep chemotestapps baseapps guiapps  alopexapp  netparserapp networkminerapp gnuplot_i autotestapps testclasses # gnuplotchemostep oldsource  gtkmmRender
# SUBDIRS = gnuplot_i utils tinyxml autogui chemostep tinyautogui qtautogui blitzchemostep tinyblitzchemostep netanalysis baseapps wormsim evoannealapp chemotestapps netanalysisapp # evoapp  alopexapp alopextest guiapps # evoannealcheckapp networkminerapp autotestapps testclasses # netparserapp  gnuplotchemostep oldsource  gtkmmRender
SUBDIRS = tinyxml utils chemostep blitzchemostep tinyblitzchemostep autogui tinyautogui wormsim qtautogui baseapps networkminerapp evoannealapp gaapps # autotestapps evoapp  alopexapp alopextest guiapps # evoannealcheckapp testclasses # netparserapp  gnuplotchemostep oldsource  gtkmmRender


